--- a/.gitignore
+++ b/.gitignore
@@ -341,3 +341,4 @@ ASALocalRun/
 /src/AntSK/AntSK.xml
 /src/EasyAgent/EasyAgent.db
 /src/AIShell/appsettings.Development.json
+/src/AIShell/AIShell.db
