--- a/src/AIShell.Doamin/AIShell.Domain.csproj
+++ b/src/AIShell.Doamin/AIShell.Domain.csproj
@@ -6,18 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AntDesign.Charts" Version="0.5.1" />
-    <PackageReference Include="AntDesign.ProLayout" Version="0.18.2" />
-   
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="AntDesign.Charts" Version="0.5.6" />
+    <PackageReference Include="AntDesign.ProLayout" Version="1.0.1" />
+    <PackageReference Include="BlazorComponents.Terminal" Version="0.6.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
 
     <PackageReference Include="AutoMapper" Version="8.1.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
-    <PackageReference Include="Markdig" Version="0.37.0" />
+    <PackageReference Include="Markdig" Version="0.39.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="SqlSugarCore" Version="5.1.4.154" />
-    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
-    <PackageReference Include="RestSharp" Version="110.2.0" />
-    <PackageReference Include="NPOI" Version="2.7.0" />
+    <PackageReference Include="SqlSugarCore" Version="5.1.4.172" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
+    <PackageReference Include="RestSharp" Version="112.1.0" />
+    <PackageReference Include="NPOI" Version="2.7.2" />
   </ItemGroup>
 </Project>
