--- a/src/AIShell.Doamin/AIShell.Domain.csproj
+++ b/src/AIShell.Doamin/AIShell.Domain.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="SSH.NET" Version="2024.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
 
+    <PackageReference Include="Microsoft.SemanticKernel" Version="$(SKVersion)" />
+    <PackageReference Include="Microsoft.SemanticKernel.Core" Version="$(SKVersion)" />
+    <PackageReference Include="Microsoft.SemanticKernel.Plugins.Core" Version="$(SKVersion)-alpha" />
+
     <PackageReference Include="AutoMapper" Version="8.1.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Markdig" Version="0.39.1" />
