--- a/src/AIShell.Doamin/AIShell.Domain.csproj
+++ b/src/AIShell.Doamin/AIShell.Domain.csproj
@@ -8,7 +8,6 @@
   <ItemGroup>
     <PackageReference Include="AntDesign.Charts" Version="0.5.6" />
     <PackageReference Include="AntDesign.ProLayout" Version="1.0.1" />
-    <PackageReference Include="BlazorComponents.Terminal" Version="0.6.0" />
     <PackageReference Include="SSH.NET" Version="2024.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
 
@@ -24,5 +23,8 @@
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="NPOI" Version="2.7.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorComponents.Terminal\BlazorComponents.Terminal.csproj" />
   </ItemGroup>
 </Project>
